--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,3 +1,4 @@
+---
 version: 2
 updates:
   - package-ecosystem: github-actions
@@ -11,16 +12,13 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: '06:00'
     commit-message:
       prefix: chore
       include: scope
   - package-ecosystem: docker
     directory: /
     schedule:
-      interval: weekly
-      time: '06:00'
-      day: sunday
+      interval: daily
     commit-message:
       prefix: chore
       include: scope
