--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@opentelemetry/auto-instrumentations-node": "0.39.0",
     "@opentelemetry/exporter-metrics-otlp-proto": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
+    "@opentelemetry/resources": "1.15.2",
     "@opentelemetry/sdk-metrics": "1.15.2",
     "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/semantic-conventions": "1.15.2",
     "body-parser": "1.20.2",
     "express": "4.18.2",
     "express-prom-bundle": "6.6.0",
