--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@opentelemetry/api": "1.4.1",
     "@opentelemetry/auto-instrumentations-node": "0.39.1",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-metrics-otlp-proto": "0.41.2",
+    "@opentelemetry/exporter-trace-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-proto": "0.41.2",
     "@opentelemetry/resources": "1.15.2",
     "@opentelemetry/sdk-metrics": "1.15.2",
