--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@opentelemetry/semantic-conventions": "1.22.0",
     "body-parser": "1.20.2",
     "express": "4.18.3",
+    "helmet": "7.1.0",
     "mjml": "4.15.3",
     "yargs": "17.7.2"
   },
