--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -28,8 +28,8 @@ spec:
       name: vibioh/mjml
       tag: '202404040933' # {"$imagepolicy": "default:flux-mjml-api:tag"}
     labels:
-      tags.datadoghq.com/env: "production"
-      tags.datadoghq.com/service: "mjml"
+      tags.datadoghq.com/env: 'production'
+      tags.datadoghq.com/service: 'mjml'
       tags.datadoghq.com/version: '202404040933' # {"$imagepolicy": "default:flux-mjml-api:tag"}
     env:
       - name: VERSION
@@ -43,6 +43,7 @@ spec:
     port: 3000
     config:
       OTEL_ENDPOINT_URL: datadog.observability:4317
+      OTEL_NODE_RESOURCE_DETECTORS: env,container,process
       OTEL_RESOURCE_ATTRIBUTES: env=production,git.repository_url=github.com/ViBiOh/mjml-api
     probes:
       readiness: /health
