--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@opentelemetry/api": "1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "0.44.0",
     "@opentelemetry/exporter-metrics-otlp-grpc": "0.50.0",
     "@opentelemetry/exporter-metrics-otlp-proto": "0.50.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "0.50.0",
