--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/ViBiOh/mjml-api",
   "main": "dist/index.js",
   "scripts": {
-    "init": "curl --disable --silent --show-error --location --max-time 30 'https://raw.githubusercontent.com/ViBiOh/scripts/main/bootstrap' | bash -s 'git_hooks'",
+    "init": "curl --disable --silent --show-error --location --max-time 30 'https://raw.githubusercontent.com/ViBiOh/scripts/main/bootstrap.sh' | bash -s 'git_hooks'",
     "format": "./node_modules/prettier/bin/prettier.cjs --write \"src/**/*.mjs\"",
     "style": "./node_modules/eslint/bin/eslint.js --fix \"src/**/*.mjs\"",
     "start": "node src/index.mjs"
