--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ on:
       - main
 
 env:
-  SCRIPTS_NO_INTERACTIVE: 'true'
+  SCRIPTS_NO_INTERACTIVE: "true"
 
 defaults:
   run:
@@ -38,7 +38,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: "22"
       - run: |
           npm install --ignore-scripts --global npm@8
       - name: Build
@@ -74,6 +74,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Publish
+        if: env.DOCKER_USER && env.DOCKER_PASS
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
