--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ on:
       - main
 
 env:
-  SCRIPTS_NO_INTERACTIVE: 'true'
+  SCRIPTS_NO_INTERACTIVE: "true"
 
 defaults:
   run:
@@ -38,7 +38,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: "22"
       - run: |
           npm install --ignore-scripts --global npm@8
       - name: Build
@@ -78,6 +78,7 @@ jobs:
           docker login "${DOCKER_REGISTRY}/${DOCKER_NAMESPACE}" -u nologin --password-stdin <<< "${SCW_SECRET_KEY}"
           scripts/docker_promote.sh -d "$(make version-date)" "${DOCKER_NAMESPACE}/$(make name)" "$(make version)"
       - name: Flux
+        if: emv.FLUX_WEBHOOK_URL
         env:
           FLUX_TOKEN: ${{ secrets.FLUX_TOKEN }}
           FLUX_WEBHOOK_URL: ${{ secrets.FLUX_WEBHOOK_URL }}
