--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: mailer
+  name: mjml
   namespace: default
 spec:
   interval: 120m
   chart:
     spec:
-      chart: cron
-      version: '0.0.36'
+      chart: app
+      version: '0.1.2'
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -22,9 +22,7 @@ spec:
   rollback:
     cleanupOnFail: true
   values:
-    nameOverride: mailer
-    schedule: '0 8 * * *'
-    timeZone: 'Europe/Paris'
+    nameOverride: mjml
     image:
       name: rg.fr-par.scw.cloud/vibioh/mjml
       tag: '202505152357' # {"$imagepolicy": "default:flux-mjml-api:tag"}
