--- a/infra/api.yaml
+++ b/infra/api.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -7,8 +8,8 @@ spec:
   interval: 120m
   chart:
     spec:
-      chart: app
-      version: '0.1.2'
+      chart: cron
+      version: '0.0.36'
       sourceRef:
         kind: HelmRepository
         name: vibioh
@@ -22,6 +23,8 @@ spec:
   rollback:
     cleanupOnFail: true
   values:
+    schedule: '0 8 * * *'
+    timeZone: 'Europe/Paris'
     nameOverride: mjml
     image:
       name: rg.fr-par.scw.cloud/vibioh/mjml
@@ -39,8 +42,8 @@ spec:
         valueFrom:
           fieldRef:
             fieldPath: metadata.labels['tags.datadoghq.com/service']
-    port: 3000
     config:
+      MJML_LISTEN_DURATION: '180'
       OTEL_ENDPOINT_URL: datadog.observability:4317
       OTEL_RESOURCE_ATTRIBUTES: env=production,git.repository_url=github.com/ViBiOh/mjml-api
     probes:
@@ -50,5 +53,3 @@ spec:
         memory: 128Mi
       requests:
         memory: 128Mi
-    autoscaling:
-      enabled: false
